--- a/api-service-number/api-service-number.csproj
+++ b/api-service-number/api-service-number.csproj
@@ -16,4 +16,8 @@
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-preview.2.efcore.9.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Logs\" />
+    </ItemGroup>
+
 </Project>
